Missing resources added

--- a/data/qnotero.desktop
+++ b/data/qnotero.desktop
@@ -3,7 +3,7 @@ Name=Qnotero
 Comment=Quick access to your Zotero references
 TryExec=qnotero
 Exec=qnotero
-Icon=accessories-dictionary
+Icon=/usr/share/qnotero/resources/light/qnotero.png
 Type=Application
 X-GNOME-DocPath=
 X-GNOME-Bugzilla-Bugzilla=
