Add filesystem layout (2nd try)

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -27,4 +27,4 @@ apps:
 
 layout:
   /usr/share/qnotero:
-    bind: $SNAP/usr/share/qnotero
+    bind: $SNAP/lib/python3.6/site-packages/usr/share/qnotero
