--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,8 +16,32 @@ parts:
     build-packages:
       - python3-setuptools
 
+  # Remote part for support of various desktop technologies
+  # Refer: https://github.com/ubuntu/snapcraft-desktop-helpers/blob/master/snapcraft.yaml
+  desktop-qt5:
+    source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
+    source-depth: 1
+    source-subdir: qt
+    plugin: make
+    make-parameters: ["FLAVOR=qt5"]
+    build-packages:
+      - dpkg-dev
+    stage-packages:
+      - libxkbcommon0
+      - ttf-ubuntu-font-family
+      - shared-mime-info
+      - libqt5gui5
+      - libgdk-pixbuf2.0-0
+      - libqt5svg5 # for loading icon themes which are svg
+      - try: [appmenu-qt5] # not available on core18
+      - locales-all
+      - xdg-user-dirs
+      - fcitx-frontend-qt5
+    #- qt5-gtk-platformtheme
+
 apps:
   qnotero:
+    desktop: $SNAP/lib/python3.6/site-packages/usr/share/applications/qnotero.desktop
     extensions:
       - kde-neon
     command: bin/qnotero
@@ -27,4 +51,4 @@ apps:
 
 layout:
   /usr/share/qnotero:
-    bind: $SNAP/lib/python3.6/site-packages/usr/share/qnotero
+    symlink: $SNAP/lib/python3.6/site-packages/usr/share/qnotero
