--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,4 +1,5 @@
 name: qnotero
+title: Qnotero
 version: '2.2.0'
 summary: Standalone sidekick to Zotero reference manager.
 description: |
@@ -9,14 +10,10 @@ confinement: strict
 grade: stable
 
 plugs:
-  zotero-classic-dir:
-    interface: personal-files
-    write:
-      - $HOME/Zotero
-  zotero-snap-dir:
-    interface: personal-files
-    write:
-      - $HOME/snap/zotero-snap/common/Zotero
+  zoterodata:
+    interface: content
+    content: writable-data
+    target: $SNAP_USER_COMMON/Zotero
 
 parts:
   qnotero:
@@ -24,7 +21,7 @@ parts:
     source: https://github.com/ealbiter/qnotero.git
     override-pull: |
        snapcraftctl pull
-       sed -i.bak -e 's|Icon=/usr/share/qnotero/resources/light/qnotero.png|Icon=lib/python3.6/site-packages/usr/share/qnotero/resources/light/qnotero.png|g' resources/qnotero.desktop
+       sed -i.bak -e 's|Icon=/usr/share/qnotero/resources/light/qnotero.png|Icon=lib/python3.6/site-packages/usr/share/qnotero/resources/light/qnotero.png|g' resources/Linux/qnotero.desktop
     stage-packages:
       - python3-pyqt5
     build-packages:
@@ -38,8 +35,6 @@ apps:
     command: bin/qnotero
     plugs:
       - network-bind
-      - zotero-classic-dir
-      - zotero-snap-dir
       - system-observe
       - home
       - unity7
